revised emag and other contents

--- a/index.html
+++ b/index.html
@@ -14,35 +14,44 @@
       <img src="webdeveloper.jpg" class="card-img" alt="...">
       <div class="card-img-overlay"><!--image overlay-->
         <!--header-->
-        <h5 class="card-title d-flex justify-content-center sticky-top">Christer Zandrei Miroy</h5>
-        <p class="card-text d-flex justify-content-center">Full-Stack Web Developer</p>
+        <h4 class="card-title d-flex justify-content-center ">Christer Zandrei Miroy</h4>
+        <p class="card-text d-flex justify-content-center">Web Developer</p>
         <!--end header-->
         <!--about me-->
         <div class="card">
           <h5 class="card-header m-2">About Me</h5>
           <div class="card-body m-2">
-            <p class="card-text">I am an aspiring web developer. I took up web development bootcamp to develop and enhance the skills needed for this profession such as HTML, Bootstrap 5, and JavaScript. As for my style, I am a huge fan of minimalist layouts because it is pleasing to the eyes of the user, and I believe in the "Less is more" philosphy. Feel free to check some of my sample works that I posted below. Thank you!</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ullam asperiores molestiae deserunt nihil veritatis, sed accusantium, laborum fugiat quis quas mollitia voluptas unde itaque cum maiores? Voluptatem, quis quia. </p>
           </div>
         </div>
         <!--end about me-->
         <!--sample works-->
         <div class="card">
-          <h5 class="card-header m-2">Sample Works</h5>
+          <div class="card-header m-2">
+            <h5>Sample Works</h5>
+            <p>Click on the image for details</p>
+          </div>
           <!--sample grid-->
           <div class="row m-2"><!--row 1-->
-            <div class="col-sm-6">
+            <div class="col-sm-4">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title"><a href="https://christer-miroy.github.io/index.html" target="_blank">E-Magazine</a></h5>
-                  <p class="card-text">This is my first project using Bootstrap 5. Please do note that the website is only a mock-up.</p>
+                  <h5 class="card-title">
+                    <a href="https://christer-miroy.github.io/index.html" target="_blank"><img src="emag.png" class="picture"></a>
+                    <p>E-Magazine</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, illo asperiores aut officiis provident nihil quibusdam laborum dicta porro vero incidunt doloremque natus sed minima nisi alias dolor soluta cum?</p>
+                  </h5>
                 </div>
               </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title"><a href="jsprojects.html" target="_blank">JavaScript Projects</a></h5>
-                  <p class="card-text">Compilation of some of the mini JavaScript projects.</p>
+                  <h5 class="card-title">
+                    <a href="https://christer-miroy.github.io/patient_information_system.github.io/patientform.html" target="_blank"><img src="patient.png" class="picture"></a><br/>
+                    <p>Patient Information Form</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis, id, tempora exercitationem, voluptates ducimus nisi enim ut ipsa placeat iste autem nostrum deserunt voluptatibus eveniet facere distinctio vitae fugiat error!</p>
+                  </h5>
                 </div>
               </div>
             </div>
