final revision sana

--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@
       <img src="webdeveloper.jpg" class="card-img" alt="...">
       <div class="card-img-overlay"><!--image overlay-->
         <!--header-->
-        <h4 class="card-title d-flex justify-content-center ">Christer Zandrei Miroy</h4>
+        <h2 class="card-title d-flex justify-content-center">Christer Zandrei Miroy</h2>
         <p class="card-text d-flex justify-content-center">Web Developer</p>
         <!--end header-->
         <!--about me-->
         <div class="card">
-          <h5 class="card-header m-2">About Me</h5>
+          <h3 class="card-header m-2">About Me</h3>
           <div class="card-body m-2">
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ullam asperiores molestiae deserunt nihil veritatis, sed accusantium, laborum fugiat quis quas mollitia voluptas unde itaque cum maiores? Voluptatem, quis quia. </p>
+            <p class="card-text">I am an aspiring web developer, particularly on the back-end aspect, for I believe that the data gathered are the heart and soul of every website. It provides information that will determine the action and direction of every business. Aside from that, I am also knowledgeable with the tools used for front-end web development such as CSS, Bootstrap 5, JavaScript, and React.</p>
           </div>
         </div>
         <!--end about me-->
         <!--sample works-->
         <div class="card">
           <div class="card-header m-2">
-            <h5>Sample Works</h5>
-            <p>Click on the image for details</p>
+            <h3>Sample Works</h3>
           </div>
           <!--sample grid-->
           <div class="row m-2"><!--row 1-->
@@ -39,8 +38,8 @@
                   <h5 class="card-title">
                     <a href="https://christer-miroy.github.io/index.html" target="_blank"><img src="emag.png" class="picture"></a>
                     <p>E-Magazine</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, illo asperiores aut officiis provident nihil quibusdam laborum dicta porro vero incidunt doloremque natus sed minima nisi alias dolor soluta cum?</p>
                   </h5>
+                  <p>This is my first major project which I used mostly Bootstrap 5 as it's scripting language.</p>
                 </div>
               </div>
             </div>
@@ -50,8 +49,8 @@
                   <h5 class="card-title">
                     <a href="https://christer-miroy.github.io/patient_information_system.github.io/patientform.html" target="_blank"><img src="patient.png" class="picture"></a><br/>
                     <p>Patient Information Form</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis, id, tempora exercitationem, voluptates ducimus nisi enim ut ipsa placeat iste autem nostrum deserunt voluptatibus eveniet facere distinctio vitae fugiat error!</p>
                   </h5>
+                  <p>JavaScript site with APIs.</p>
                 </div>
               </div>
             </div>
