--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <input type="text" name="fullname" placeholder="Full Name" size="50"><br><br>
                     <input type="email" name="email" placeholder="E-Mail" size="50"><br><br>
                     <textarea type="textarea" value="message" rows="5" cols="53" placeholder="Message"></textarea><br><br>
-                    <a href="/" class="send"><h4>Send Message</h4></a>
+                    <a class="send"><h4>Send Message</h4></a>
                   </form>
                 </div>
               </div>
