--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="card-img-overlay"><!--image overlay-->
         <!--header-->
         <h1 class="card-title d-flex justify-content-center">Christer Zandrei Miroy</h1>
-        <p class="card-text d-flex justify-content-center">Web Developer</p>
+        <p class="card-text d-flex justify-content-center">Back-End Web Developer</p>
         <!--end header-->
         <!--about me-->
         <div class="card">
