--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="card-img-overlay"><!--image overlay-->
         <!--header-->
         <h1 class="card-title d-flex justify-content-center">Christer Zandrei Miroy</h1>
-        <p class="card-text d-flex justify-content-center">Back-End Web Developer</p>
+        <p class="card-text d-flex justify-content-center">Web Developer</p>
         <!--end header-->
         <!--about me-->
         <div class="card">
@@ -60,7 +60,7 @@
         <!--end sample works-->
         <!--contact details-->
         <div class="card">
-          <h5 class="card-header m-2">Contact Details</h5>
+          <h3 class="card-header m-2">Contact Details</h3>
           <!--sample grid-->
           <div class="row m-2"><!--row 1-->
             <div class="col-sm-12"><!--email address-->
