revised second project and description

--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
                     <a href="https://christer-miroy.github.io/index.html" target="_blank"><img src="emag.png" class="picture"></a>
                     <p>E-Magazine</p>
                   </h5>
-                  <p>This is my first major project which I used mostly Bootstrap 5 as it's scripting language.</p>
+                  <p>Languages used: CSS and BootStrap 5</p>
                 </div>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
-                    <a href="https://christer-miroy.github.io/patient_information_system.github.io/patientform.html" target="_blank"><img src="patient.png" class="picture"></a><br/>
+                    <a href="https://edward-mamangon.github.io/acewebsolutions/" target="_blank"><img src="ace.png" class="picture"></a><br/>
                     <h5 class="card-title">
-                    <p>Patient Information Form</p>
+                    <p>ACE Web Solutions</p>
                   </h5>
-                  <p>JavaScript site with APIs.</p>
+                  <p>Languages used: React and JavaScript</p>
                 </div>
               </div>
             </div>
