change ace to comapp

--- a/index.html
+++ b/index.html
@@ -46,11 +46,27 @@
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
-                    <a href="https://edward-mamangon.github.io/acewebsolutions/" target="_blank"><img src="ace.png" class="picture"></a><br/>
+                    <a href="https://radiant-tundra-44630.herokuapp.com/" target="_blank"><img src="commapp.jpg" class="picture"></a><br/>
                     <h5 class="card-title">
-                    <p>ACE Web Solutions</p>
+                    <p>Communications App</p>
                   </h5>
-                  <p>Languages used: React and JavaScript</p>
+                  <p>Languages used:
+                    <div class="col-sm-6">
+                      <ul>
+                        Front-End
+                        <li>HTML</li>
+                        <li>CSS</li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-6">
+                      <ul>
+                        Back-End
+                        <li>NodeJS</li>
+                        <li>Express</li>
+                        <li>MongoDB</li>
+                      </ul>
+                    </div>
+                  </p>
                 </div>
               </div>
             </div>
