--- a/index.html
+++ b/index.html
@@ -71,6 +71,34 @@
               </div>
             </div>
           </div><!--end row 1-->
+          <div class="row m-2"><!--row 2-->
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <a href="https://mern-jobify-4the.onrender.com/landing" target="_blank"><img src="jobify.jpg" class="picture"></a>
+                    <p>Job Tracking App</p>
+                  </h5>
+                  <p>Languages used:
+                    <div class="col-sm-6">
+                      <ul>
+                        Front-End
+                        <li>React JS</li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-6">
+                      <ul>
+                        Back-End
+                        <li>NodeJS</li>
+                        <li>Express</li>
+                        <li>MongoDB</li>
+                      </ul>
+                    </div>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div><!--end row 2-->
           <!--end sample grid-->
         </div>
         <!--end sample works-->
