--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                     </div>
                   </p>
                 </div>
+              </div>
+            </div>
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
